--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,11 @@
 language: erlang
 
 env:
-#   - ST=GemStone-2.4.4.1 GLASS="1.0-beta.9" LOADS=""
-#   - ST=GemStone-2.4.4.7
-#   - ST=GemStone-2.4.5 
-#   - ST=GemStone-2.4.5.2
-#   - ST=GemStone-3.0.1 
+   - ST=GemStone-2.4.4.1 GLASS="1.0-beta.9" LOADS="'Development Tests'"
+   - ST=GemStone-2.4.4.7 GLASS="1.0-beta.9" LOADS="'Development Tests'"
+   - ST=GemStone-2.4.5 GLASS="1.0-beta.9" LOADS="'Development Tests'"
+   - ST=GemStone-2.4.5.2 GLASS="1.0-beta.9" LOADS="'Development Tests'"
+   - ST=GemStone-3.0.1 GLASS="1.0-beta.9" LOADS="'Development Tests'"
    - ST=GemStone-3.1.0.2 GLASS="1.0-beta.9" LOADS="'Development Tests'"
 
 install:
