--- a/.travis.yml
+++ b/.travis.yml
@@ -8,6 +8,8 @@ env:
    - ST=GemStone-3.0.1 GLASS="1.0-beta.9" LOADS="'Development Tests'"
    - ST=GemStone-3.1.0.2 GLASS="1.0-beta.9" LOADS="'Development Tests'"
 
+   - ST=Pharo-1.4 LOADS="'Development Tests'"
+
 install:
    - export PROJECT_HOME="$(pwd)"
    - cd $HOME
