--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,12 @@
 language: erlang
 
 env:
-   - ST=GemStone-2.4.4.1 GLASS="1.0-beta.9" LOADS="'Development Tests'"
-   - ST=GemStone-2.4.4.7 GLASS="1.0-beta.9" LOADS="'Development Tests'"
-   - ST=GemStone-2.4.5 GLASS="1.0-beta.9" LOADS="'Development Tests'"
-   - ST=GemStone-2.4.5.2 GLASS="1.0-beta.9" LOADS="'Development Tests'"
-   - ST=GemStone-3.0.1 GLASS="1.0-beta.9" LOADS="'Development Tests'"
+
+#   - ST=GemStone-2.4.4.1 GLASS="1.0-beta.9" LOADS="'Development Tests'"
+#   - ST=GemStone-2.4.4.7 GLASS="1.0-beta.9" LOADS="'Development Tests'"
+#   - ST=GemStone-2.4.5 GLASS="1.0-beta.9" LOADS="'Development Tests'"
+#   - ST=GemStone-2.4.5.2 GLASS="1.0-beta.9" LOADS="'Development Tests'"
+#   - ST=GemStone-3.0.1 GLASS="1.0-beta.9" LOADS="'Development Tests'"
    - ST=GemStone-3.1.0.2 GLASS="1.0-beta.9" LOADS="'Development Tests'"
 
    - ST=Pharo-1.4 LOADS="'Development Tests'"
@@ -19,5 +20,9 @@ install:
    - source build_env_vars
    - ln -s $PROJECT_HOME $GIT_PATH
    - ./build_image.sh
+
+before_script:
+   - export BASELINE="Seaside30"
+   - export REPOSITORY_BASE="Seaside30/packages"
 
 script: $PROJECT_HOME/tests/testTravisCI.sh -verbose
