--- a/.travis.yml
+++ b/.travis.yml
@@ -2,11 +2,11 @@ language: erlang
 
 env:
 
-#   - ST=GemStone-2.4.4.1 GLASS="1.0-beta.9" LOADS="'Development Tests'"
-#   - ST=GemStone-2.4.4.7 GLASS="1.0-beta.9" LOADS="'Development Tests'"
-#   - ST=GemStone-2.4.5 GLASS="1.0-beta.9" LOADS="'Development Tests'"
-#   - ST=GemStone-2.4.5.2 GLASS="1.0-beta.9" LOADS="'Development Tests'"
-#   - ST=GemStone-3.0.1 GLASS="1.0-beta.9" LOADS="'Development Tests'"
+   - ST=GemStone-2.4.4.1 GLASS="1.0-beta.9" LOADS="'Development Tests'"
+   - ST=GemStone-2.4.4.7 GLASS="1.0-beta.9" LOADS="'Development Tests'"
+   - ST=GemStone-2.4.5 GLASS="1.0-beta.9" LOADS="'Development Tests'"
+   - ST=GemStone-2.4.5.2 GLASS="1.0-beta.9" LOADS="'Development Tests'"
+   - ST=GemStone-3.0.1 GLASS="1.0-beta.9" LOADS="'Development Tests'"
    - ST=GemStone-3.1.0.2 GLASS="1.0-beta.9" LOADS="'Development Tests'"
 
 #   - ST=Pharo-1.4 LOADS="'Development Tests'"
