--- a/.travis.yml
+++ b/.travis.yml
@@ -7,7 +7,7 @@ env:
 #   - ST=GemStone-2.4.5 GLASS="1.0-beta.9" LOADS="'Development Tests'"
 #   - ST=GemStone-2.4.5.2 GLASS="1.0-beta.9" LOADS="'Development Tests'"
 #   - ST=GemStone-3.0.1 GLASS="1.0-beta.9" LOADS="'Development Tests'"
-   - ST=GemStone-3.1.0.2 GLASS="1.0-beta.9" LOADS="'Development Tests'"
+   - ST=GemStone-3.1.0.2 GLASS="1.0-beta.9" LOADS="'Core' 'Tests'"
 
 #   - ST=PharoCore-1.1 LOADS="'Development Tests'"
 #   - ST=PharoCore-1.2 LOADS="'Development Tests'"
