--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,5 @@
 language: erlang
 
-#blacklist
-branches
-  except:
-    - seaside30-no-dot-gemstone
 env:
 
    - ST=GemStone-2.4.4.1 GLASS="1.0-beta.9" LOADS="'Core' 'Tests'" 
@@ -21,6 +17,10 @@ env:
    - ST=Squeak-4.3 LOADS="'Core' 'Tests'" 
    - ST=Squeak-4.4 LOADS="'Core' 'Tests'" 
    - ST=Squeak-4.5 LOADS="'Core' 'Tests'" 
+#blacklist
+branches:
+  except:
+    - seaside30-no-dot-gemstone
 
 install:
    - export PROJECT_HOME="$(pwd)"
