--- a/.travis.yml
+++ b/.travis.yml
@@ -3,6 +3,7 @@ language: erlang
 env:
 
    - ST=GemStone-2.4.5.2 GLASS="1.0-beta.9" LOADS="'Core' 'Tests'"
+   - ST=GemStone-3.1.0.2 GLASS="1.0-beta.9" LOADS="'Core' 'Tests'"
    - ST=GemStone-3.1.0.4 GLASS="1.0-beta.9" LOADS="'Core' 'Tests'"
 
 install:
